--- a/Desktop/PigGame/css/style.css
+++ b/Desktop/PigGame/css/style.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(back.jpg);
+    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(../img/back.jpg);
     background-size: cover;
     background-position: center;
     font-family: Lato;
@@ -110,16 +110,16 @@ button {
 }
 
 button:hover { font-weight: 600; }
-button:hover i { margin-right: 20px; }
+button:hover span { margin-right: 15px; font-weight: 300; }
 
 button:focus {
     outline: none;
 }
 
-i {
+span {
     color: #EB4D4D;
     display: inline-block;
-    margin-right: 15px;
+    margin-right: 5px;
     font-size: 32px;
     line-height: 1;
     vertical-align: text-top;
