--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ span {
 .dice {
     position: absolute;
     left: 50%;
-    top: 178px;
+    top: 50%;
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
